# mini-train-sys

./: .gitattributes  .gitignore  AGENTS.md  HISTORY.md  LICENSE  README.md  pyproject.toml
configs/: README.md  data_token_shards_example.yaml  model_125m.yaml  model_125m_dense.yaml  model_125m_moe.yaml  model_15m.yaml  model_15m_dense.yaml  model_15m_seq256.yaml  model_50m.yaml  model_debug_dense.yaml  model_debug_moe.yaml  model_default.yaml  model_tiny_smoke.yaml  synbios_moe_model.yaml  synbios_moe_multi5_permute_pretrain.yaml  synbios_moe_pretrain.yaml  synbios_moe_smoke_model.yaml  synbios_moe_smoke_pretrain.yaml  train_ddp.yaml  train_debug.yaml  train_fsdp.yaml  train_single.yaml  train_smoke_gpu.yaml
configs/smoke/: checkpoint_cpu.yaml  ddp_cpu.yaml  fsdp_cuda.yaml
configs/synbios_moe/: base.yaml  model.yaml  probe_pipeline.yaml  probe_pipeline_notebook_smoke.yaml
docs/: README.md  architecture.md  benchmark_plan.md  cuda_ext_run_commands.md  cuda_flash_attention_code_reading_guide.md  cuda_flash_attention_learning_report.md  cuda_flash_attention_sm86_spill_analysis.md  flash_attention_pretraining_plan.md  flash_bwd_kernel_deep_dive.md  flash_fwd_kernel_deep_dive.md  mixed_precision_plan.md  moe.md  reference_map.md  references.md  subsession_plan.md
docs/benchmarks/: benchmark_plan.md  distributed_benchmark.md  sm86_4gb_benchmark_capacity.md
docs/data/: data_pipeline.md
docs/design-notes/: data_preprocessing_plan.md  flash_attention_pretraining_plan.md  subsession_plan.md
docs/experiments/: synbios_moe_probe_pipeline.md  synbios_moe_reproduction_plan.md  synbios_moe_training_flow.md
docs/guides/: architecture.md  project_walkthrough.md  reading_guide.md  server_setup.md
docs/kernels/: cuda_ext_run_commands.md  cuda_flash_attention_code_reading_guide.md  flash_bwd_kernel_deep_dive.md  flash_fwd_kernel_deep_dive.md
docs/model/: moe.md
docs/references/: reference_map.md  references.md
docs/training/: distributed_training.md  mixed_precision_plan.md  monitoring_and_recovery.md
experiments/: __init__.py
experiments/synbios_moe/: README.md  __init__.py  cloze_evaluation.py  data.py  diagnostic_report.py  evaluation.py  formal_report.py  probe_benchmark.py  probe_checkpoint.py  probe_data.py  probe_diagnostics.py  probe_pipeline.py  probes.py  repository_audit.py  router_analysis.py
minitrain/: __init__.py
minitrain/data/: README.md  __init__.py  dataloader.py  documents.py  preprocess.py  tinystories.py  tokenizer.py
minitrain/distributed/: README.md  __init__.py  comm_hooks.py  custom_allreduce.py  ddp.py  fsdp.py  single.py  strategy.py
minitrain/kernels/: README.md  __init__.py  amp.py  torch_ops.py
minitrain/model/: README.md  __init__.py  blocks.py  config.py  moe.py  moe_router.py  ops.py  rotary.py  transformer.py
minitrain/runtime/: README.md  __init__.py  config.py  device.py  factory.py  logger.py  monitoring.py  provenance.py  scaling.py  server_check.py
minitrain/train/: README.md  checkpoint.py  lr_scheduler.py  metrics.py  optim.py  precision.py  runner.py  trainer.py
minitrain/utils/: profiler.py  seed.py
reports/: README.md  distributed_bench.md  operator_bench.md  synbios_multi5_permute_cloze_500k.md  synbios_single_cloze_100k.md  training_bench.md
reports/nsight/: standalone_attention_bwd_50331648_20260712_230617_693024.csv  standalone_attention_fwd_50331648.csv  (+2 more)
results/: BENCHMARK_SUMMARY.md  MANIFEST.sha256  README.md
scripts/: README.md  clean.ps1  clean.sh  eval.py  prepare_data.py  run_dist_bench.py  run_distributed.sh  run_train.ps1  run_train.sh  sample.py  synbios_moe.py  synbios_moe_runbook.md  train.py
tests/: README.md  distributed_bench_utils.py  distributed_server_benchmark.ipynb  example_training.ipynb  main.exp  main.lib  moe_operator_bench.ipynb  moe_operator_bench_linux_server.ipynb  moe_operator_bench_sm86_4gb.ipynb  operator_bench.ipynb  operator_bench_linux_server.ipynb  operator_bench_sm86_4gb.ipynb  operator_bench_utils.py  operator_nsight.py  synbios_moe_end_to_end.ipynb  test_checkpoint_contract.py  test_cuda_backend_fallback.py  test_cuda_build_config.py  test_cuda_flash_attention.py  test_data_pipeline.py  test_distributed_bench_utils.py  test_distributed_checkpoint.py  test_flash_attention_adapter.py  test_formal_probe_report.py  test_kernel_amp_contract.py  test_mixed_precision.py  test_model_dropout.py  test_model_training_metrics.py  test_operator_bench_utils.py  test_parallel_config.py  test_probe_diagnostic_report.py  test_probe_diagnostics.py  test_repository_audit.py  test_rmsnorm_triton.py  test_runtime_logger.py  test_server_check.py  test_synbios_moe.py  test_training_monitoring.py  test_training_path.py
(+830 files in other folders)
