[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-train-sys"
version = "0.1.0"
description = "A small LLM training system for kernel and distributed-training benchmarks."
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy",
  "pyyaml",
  "tensorboard",
  "torch",
]

[project.optional-dependencies]
dev = [
  "cloudpickle",
  "pytest",
  "ruff",
]
triton = [
  "triton",
]

[tool.setuptools.packages.find]
include = ["minitrain*"]

[tool.ruff]
line-length = 100
