[build-system]
requires = ["setuptools>=68,<82", "wheel>=0.41"]
build-backend = "setuptools.build_meta"

[project]
name = "mini-train-sys"
version = "0.1.0"
description = "A small LLM training system for kernel and distributed-training benchmarks."
readme = "README.md"
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
  "numpy>=1.24,<3",
  "pyyaml>=6,<7",
  "tensorboard>=2.14,<3",
  # This is the version used to validate the current FSDP/DCP/Triton contracts.
  # Select its CUDA wheel through the PyTorch index in the server setup command.
  "torch==2.5.1",
]

[project.optional-dependencies]
data = [
  "pyarrow>=15,<24",
  "tiktoken>=0.7,<1",
  "tokenizers>=0.19,<1",
]
triton = [
  "triton==3.1.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
]
cuda = [
  "ninja>=1.11,<2",
  "packaging>=23,<26",
]
notebook = [
  "ipykernel>=6,<8",
  "jupyterlab>=4,<5",
  "matplotlib>=3.8,<4",
  "nbconvert>=7,<8",
  "pandas>=2,<4",
]
test = [
  "cloudpickle>=3,<4",
  "pytest>=8,<10",
  "ruff>=0.5,<1",
]
# Backward-compatible local development bundle used by the existing README.
dev = [
  "cloudpickle>=3,<4",
  "ipykernel>=6,<8",
  "jupyterlab>=4,<5",
  "matplotlib>=3.8,<4",
  "nbconvert>=7,<8",
  "pandas>=2,<4",
  "pytest>=8,<10",
  "ruff>=0.5,<1",
]
# One-command editable install for the Linux/NVIDIA experiment server. Keep the
# list explicit: Python packaging extras cannot portably include sibling extras.
server = [
  "cloudpickle>=3,<4",
  "ipykernel>=6,<8",
  "jupyterlab>=4,<5",
  "matplotlib>=3.8,<4",
  "nbconvert>=7,<8",
  "ninja>=1.11,<2",
  "nvidia-ml-py>=12,<14",
  "packaging>=23,<26",
  "pandas>=2,<4",
  "pyarrow>=15,<24",
  "pytest>=8,<10",
  "ruff>=0.5,<1",
  "tiktoken>=0.7,<1",
  "tokenizers>=0.19,<1",
  "triton==3.1.0; platform_system == 'Linux' and platform_machine == 'x86_64'",
]

[project.scripts]
minitrain-check-server = "minitrain.runtime.server_check:main"

[tool.setuptools.packages.find]
include = ["minitrain*", "experiments*"]

[tool.setuptools.package-data]
"minitrain.kernels.cuda_ext" = ["csrc/**/*"]
"minitrain.kernels.triton" = ["THIRD_PARTY_NOTICES"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = ["E402", "E712", "F811"]

[tool.pytest.ini_options]
testpaths = ["tests"]
